# rust_web_server

./: .env  Cargo.toml  Dockerfile  deploy.sh  docker-compose.yaml
.github/workflows/: ci.yml
entity/: Cargo.toml
entity/src/: course.rs  mod.rs  prelude.rs
webserice/: .env  Cargo.toml
webserice/src/: app_error.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
webservice/: Cargo.toml
webservice/src/: app_error.rs  handlers.rs  main.rs  models.rs  state.rs
