[package]
name = "entity"
version = "0.1.0"
edition = "2021"

publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }

[dependencies.sea-orm]
version = "0.12.3" # sea-orm version
